--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/QuestionTheme">
+        android:theme="@style/Base.Theme.AppCompat.Light.DarkActionBar">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -20,7 +20,8 @@
              <!--<category android:name="android.intent.category.LAUNCHER" />-->
              <!--</intent-filter>-->
         </activity>
-        <activity android:name=".questions.QuestionActivity">
+        <activity
+            android:name=".questions.QuestionActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
